# TinaPlayer

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/tina/com/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  TinaFFmpeg.cpp  TinaFFmpeg.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/java/tina/com/player/: LiveAdapter.java  MainActivity.java  PlayActivity.java  TinaPlayer.java
app/src/main/res/layout/: activity_main.xml  activity_play.xml  item_room.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/tina/com/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
live/: build.gradle
live/src/androidTest/java/com/dongnao/live/: ExampleInstrumentedTest.java
live/src/main/: AndroidManifest.xml
live/src/main/java/com/tina/live/: LiveManager.java  LiveService.java
live/src/main/java/com/tina/live/list/: Data.java  Items.java  LiveList.java  Pictures.java
live/src/main/java/com/tina/live/room/: Data.java  Info.java  Room.java  Videoinfo.java
live/src/test/java/com/dongnao/live/: ExampleUnitTest.java
